@startuml
'https://plantuml.com/sequence-diagram
class Application{
    - reader : input
    - writer : output
    - process : processor

    + main()
    - readString(String prompt, Scanner userIn)
    - readFile(input reader)
    - processAll(ArrayList<String> unprocessed, processor process)
    - writeFile(String processedString, String path, output writer)
}
class input{
    - input : File

    + constructReader()
    + storeInStringArray(Scanner reader)
}
class output{
    - output : File

    + constructWriter(String path)
    + printToFile(FileWriter writer, String processedPassage)
}
class processor{

    + splitString(String passageLine)
    + makeString(String[] line)
    + public String processAll(ArrayList<String> unprocessed)

}
Application o--> input
Application o--> output
Application o--> processor
@enduml